adding endpoint errors
