# jupyter_cassini_server/schema/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-09-16T17:48:25+00:00
+#   timestamp: 2024-09-18T21:37:04+00:00
 
 from __future__ import annotations
 
@@ -63,6 +63,11 @@ class NewChildInfo(BaseModel):
     id: str
     parent: str
     template: Optional[str] = None
+
+
+class CassiniServerError(BaseModel):
+    message: str
+    reason: str
 
 
 class LookupGetParametersQuery(BaseModel):
